Fix message box on small devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,21 @@ body {
 	overflow: auto;
 }
 
+@media (max-width: 360px) {
+	#content {
+		height: 250px;
+	}
+}
+@media (max-width: 320px) {
+	#content {
+		height: 180px;
+	}
+	#file-reader-ondrop {
+		display: none;
+	}
+}
+
+
 .ui.avatar.image { background-image: url('../img/face_avatars.min.png'); background-position: 94px -112.89px; }
 
 .tk-gallery 
